--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "symfony/process": "^5.0"
+        "php": "^7.2.5",
+        "symfony/process": "^5.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "^8.5",
+        "mockery/mockery": "^1.3.1",
         "codedungeon/phpunit-result-printer": "^0.6.1"
     },
     "autoload": {
